<resources>
    <string name="app_name">NTO Pass</string>
    <string name="authorization">Авторизация</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="password_hint">Пароль должен содержать не менее 8 символов</string>
    <string name="sign_in">Войти</string>
    <string name="error_valid">Ошибка валидации\n</string>
    <string name="error_invalid_credentials">Неверный логин или пароль</string>
    <string name="error_unknown">Непредвиденная ошибка</string>
    <string name="entry_history">История входов\n</string>
    <string name="entry_time">Время входа\n</string>
    <string name="entry">Вход</string>
    <string name="type_of_entrance">Тип прохода</string>
    <string name="no_data">Нет данных\n</string>
    <string name="qr_success_result">Успешно</string>
    <string name="qr_wrong_result">Что-то пошло не так</string>
    <string name="qr_null_result">Вход был отменён</string>
    <string name="profile">Профиль</string>
    <string name="user_view" translatable="false">Просмотр пользователя</string>
    <string name="found_user" translatable="false">Найти информацию о сотруднике</string>
    <string name="find">Найти</string>
    <string name="access" translatable="false">Доступ\n</string>
    <string name="access_right" translatable="false">Доступ разрешен</string>
    <string name="access_wrong" translatable="false">Доступ запрещен</string>
</resources>