<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="168dp"
        android:text="@string/authorization"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </TextView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="300dp"
        android:layout_height="180dp"
        android:layout_marginTop="204dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardBackgroundColor="@color/grey_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/userLogin"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="12sp">

            </EditText>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="244dp"
            android:layout_height="50dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="106dp"
            android:layout_marginEnd="28dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/userPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="13dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLength="20"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="12sp"
                tools:visibility="visible">

            </EditText>

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="37dp"
            android:layout_marginTop="160dp"
            android:text="@string/password_hint"
            android:textColor="@color/grey"
            android:textSize="10sp">

        </TextView>

    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/sign_in_button"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginTop="66dp"
        android:backgroundTint="@color/orange"
        app:cornerRadius="10dp"
        android:textSize="16sp"
        app:circularflow_defaultRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        app:circularflow_radiusInDP="1dp">

    </com.google.android.material.button.MaterialButton>

    <TextView
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/sign_in"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/sign_in_button"
        app:layout_constraintEnd_toEndOf="@+id/sign_in_button"
        app:layout_constraintStart_toStartOf="@+id/sign_in_button"
        app:layout_constraintTop_toTopOf="@+id/sign_in_button">

    </TextView>




    <TextView
        android:id="@+id/errorText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Error"
        android:textColor="#FF0000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        android:layout_marginTop="10dp">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>