<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/found_user"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="270dp"
        android:layout_height="72dp"
        android:layout_marginTop="68dp"
        android:outlineSpotShadowColor="@android:color/transparent"
        app:cardBackgroundColor="@color/grey_light"
        app:cardCornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.262"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="240dp"
            android:layout_height="35dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="18dp"
            android:layout_marginEnd="28dp"
            android:outlineSpotShadowColor="@android:color/transparent"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="10dp">

            <EditText
                android:id="@+id/userLogin"
                android:layout_width="205dp"
                android:layout_height="33dp"
                android:layout_marginLeft="13dp"
                android:background="@android:color/transparent"
                android:gravity="center_vertical"
                android:hint="@string/login"
                android:inputType="textEmailAddress"
                android:maxLength="30"
                android:maxLines="1"
                android:textColorHint="@color/grey"
                android:textSize="12sp">

            </EditText>

        </androidx.cardview.widget.CardView>


    </androidx.cardview.widget.CardView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/find_button"
        android:layout_width="100dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/orange"
        android:textSize="16sp"
        app:circularflow_defaultRadius="10dp"
        app:circularflow_radiusInDP="1dp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:elevation="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/find"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/find_button"
        app:layout_constraintEnd_toEndOf="@+id/find_button"
        app:layout_constraintStart_toStartOf="@+id/find_button"
        app:layout_constraintTop_toTopOf="@+id/find_button">

    </TextView>

</androidx.constraintlayout.widget.ConstraintLayout>